[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "bss-visualize"
authors = [
    {name = "Takuya Hasumi"},
]
description = "A visualization toolkit for blind source separation."
readme = "README.md"
urls = {url = "https://github.com/tky823/bss-visualize"}
requires-python = ">=3.7, <4"
dependencies = [
    "numpy",
    "matplotlib",
    "seaborn",
]
dynamic = [
    "version",
]

[project.optional-dependencies]
dev = [
    "flake8",
    "black",
    "isort"
]

[tool.setuptools.dynamic]
version = {attr = "bss_visualize.__version__"}

[tool.setuptools.packages.find]
exclude = [
    ".github",
]

[tool.black]
line-length = 100

[tools.flake8]
max-line-length = 100

[tool.isort]
profile = "black"
line_length = 100
